kube/base/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  postgres-svc
  namespace: kubecounter
  labels:
    app.kubernetes.io/name: kubecounter
    app.kubernetes.io/component: database
spec:
  clusterIP: None

  ports:
    - port:  5432
      name: tcp-5432

  selector:
    app.kubernetes.io/name: kubecounter
    app.kubernetes.io/component: database
